--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
 
 <body>
   <button id="getusers">Get Users</button>
+  <br/>
+  <br/>
+  <button id="getuserscache">Get Users (cache)</button>
 </body>
 
 </html>
